tests/invalid/program_type_change.cmt
program type_change
begin

procedure soma (a : int, b : int) : int 
    begin
        a := false;
        resultado := a + b; 
        return resultado
    end

end